# openCV4

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
jupyter_files/image_basics/: access_and_manipulate_pixels.ipynb
src/handling_files_and_images/: read_images.py  sysargv_python.py  write_images.py
