[tool.poetry]
name = "opencv4"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37
isolated_build = True
[testenv]
extras = test
commands = pytest {posargs}
"""

[build-system]
requires = ["poetry>=0.12", "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "poetry.masonry.api"
