[tool.poetry]
name = "opencv4"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
black = "^19.10b0"
pandas = "^1.1.0"
numpy = "^1.19.1"
opencv-contrib-python = "^4.3.0"
matplotlib = "^3.3.0"
scikit-image = "^0.17.2"
scipy = "^1.5.2"
face-recognition = "^1.3.0"
cvlib = "^0.2.5"
dlib = "^19.21.0"
requests = "^2.24.0"
progressbar = "^2.5"
keras = "^2.4.3"
flask = "^1.1.2"
tensorflow="1.13.0rc1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
scipy = "^1.5.2"
opencv-contrib-python = "^4.3.0"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37
isolated_build = True
[testenv]
extras = test
commands = pytest {posargs}
"""

[build-system]
requires = ["poetry>=0.12", "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "poetry.masonry.api"
